--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@
                 <div id="nav">
                     <nav>
                         <ul>
-                                <a href="#about"><li>About</li></a>
-                                <a href="#services"><li>Services</li></a>
-                                <a href="#portfolio"><li>Portfolio</li></a>
-                                <a href="#contact"><li>Contact</li></a>
+                            <a href="about.html"><li>About</li></a>
+                            <a href="services.html"><li>Services</li></a>
+                            <a href="portfolio.html"><li>Portfolio</li></a>
+                            <a href="contact.html"><li>Contact</li></a>
                         </ul>
                     </nav>
                 </div>
@@ -43,9 +43,6 @@
                 <img id="mainPhoto" src = "images/mainPhoto2.jpg">
                 <div id="about" class="pageSection">
                     <h2>About</h2>
-                        <h3>A little bit about me...</h3>
-                            <p>My name is Emily Lewis. I graduated from Pioneer High School in 2009; from Ferris State University with an Associates Degree in Early Childhood Education in 2013; and will have my associates in Web Design and Development from Washtenaw Community College in December of 2019. I have a passion for Web Design and Development that started with HTML back in the early days of <a href="https://www.myspace.com" target="_blank">MySpace&trade;</a> (when you could create your own page layouts) and grew to include CSS, JavaScript, and many other parts of web development.</p>
-                            <p>When I am not spending time coding, I am usually spending time with my family and pets. Some of my interests include animals, cooking, gardening, fishing, camping, hiking, swimming, gaming (tabletop games, board games, card games, and video games), music, and reading.</p>
                         <h3>My experience as a Front-End Web Developer, User Interface Designer, and User Experience Professional...</h3>
                             <p>In January of 2017, I started working as a Freelance Front-End Web Developer, User Interface (UI) Designer, and User Experience (UX) Professional. During this time I have helped clients reach a greater audience, and improve the interactions between the company and their clientele. Some of the ways I have done this are by:</p>
                                 <ul class="freelanceList">
@@ -59,48 +56,9 @@
                             <p><span class="skills">Personal Skills:</span> Interpersonal communication, conflict management, negotiation, problem solving, time management, critical thinking, detail orientation, test-driven development, adaptability/flexibility, multi-tasking, teamwork, leadership, personal responsibility, initiative, and self-motivation.</p>
                             <p><span class="skills">Web Skills:</span> User Interface Design, Responsive Design, Banner Ads, Brand Oriented Design, Favicons, Wire-frames, Mock-ups, Functional Prototypes, fully functional single and multiple page websites, web applications, User Experience Research, and Usability Testing. </p>
                             <p><span class="skills">Technical Tools:</span> HTML5, CSS3, Bootstrap, JavaScript(ES6), jQuery, MySQL, Node.js, AJAX; Photoshop, Illustrator, InDesign, Word, Excel, Power Point, Visio, VSCode, SublimeText, Filezilla, PuTTY, Mac Terminal, Google Suites, Github, Linux, Mac, Windows.</p>
-                </div>
-                <div id="services" class="pageSection">
-                        <h2>Services</h2>
-                            <h3>Designing</h3>
-                                <ul>
-                                    <li>Wireframes</li>
-                                    <li>Mockups</li>
-                                    <li>Marketing Collateral</li>
-                                </ul>>
-                            <h3>Developing</h3>
-                                <ul>
-                                    <li>Landing Page</li>
-                                    <li>Multi-page Websites</li>
-                                    <li>Web Applications</li>
-                                </ul>>
-                            <h3>Maintaing</h3>
-                                <ul>
-                                    <li>Content Updating</li>
-                                    <li>Website Redesign</li>
-                                </ul>>
-                            <h3>Testing</h3>
-                                <ul>
-                                    <li>Mockups</li>
-                                </ul>>
-                    </div>
-                <div id="portfolio" class="pageSection">
-                    <h2>Portfolio</h2>
-                        <h3>Designs</h3>
-                            <img src="#" alt="#" width="25%" height="auto">
-                            <img src="#" alt="#" width="25%" height="auto">
-                            <img src="#" alt="#" width="25%" height="auto">
-                            <img src="#" alt="#" width="25%" height="auto">
-                        <h3>Websites</h3>
-                            <img src="#" alt="#" width="25%" height="auto">
-                            <img src="#" alt="#" width="25%" height="auto">
-                            <img src="#" alt="#" width="25%" height="auto">
-                            <img src="#" alt="#" width="25%" height="auto">
-                        <h3>Applications</h3>
-                            <img src="#" alt="#" width="25%" height="auto">
-                            <img src="#" alt="#" width="25%" height="auto">
-                            <img src="#" alt="#" width="25%" height="auto">
-                            <img src="#" alt="#" width="25%" height="auto">
+                        <h3>A little bit about me personally...</h3>
+                            <p>My name is Emily Lewis. I graduated from Pioneer High School in 2009; from Ferris State University with an Associates Degree in Early Childhood Education in 2013; and will have my associates in Web Design and Development from Washtenaw Community College in December of 2019. I have a passion for Web Design and Development that started with HTML back in the early days of <a href="https://www.myspace.com" target="_blank">MySpace&trade;</a> (when you could create your own page layouts) and grew to include CSS, JavaScript, and many other parts of web development.</p>
+                            <p>When I am not spending time coding, I am usually spending time with my family and pets. Some of my interests include animals, cooking, gardening, fishing, camping, hiking, swimming, gaming (tabletop games, board games, card games, and video games), music, and reading.</p>
                 </div>
                 <div id="contact" class="pageSection">
                         <h2> Contact Me: </h2>
